style(menu): fix alignment inside toolbars

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -123,6 +123,7 @@ md-toolbar {
   .md-menu {
     height: auto;
     margin: auto;
+    padding: 0;
   }
 }
 
